# personal-news

./: .claudehooks  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  Makefile  README.md  SETUP_GUIDE.md  deploy.sh  preview_template.py  pyproject.toml  requirements.txt  ruff.toml  run.py  setup_cron.sh
.github/workflows/: build-and-push.yml
infrastructure/: Pulumi.personal-news-prod.yaml  Pulumi.yaml  README.md  __main__.py
scripts/: build-and-push.sh  deploy-ecs.sh  setup-github-iam-user.sh  setup-github-oidc.sh  sync-preferences.sh
src/: __init__.py  main.py  scheduler.py
src/ai/: __init__.py  summarizer.py
src/config/: manager.py  s3_storage.py  secrets.py
src/email/: __init__.py  sender.py
src/news/: __init__.py  fetchers.py  filters.py
templates/: ai-newsletter.html  geopolitics-newsletter.html  newsletter.html  tech-newsletter.html
